--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "front-administracion",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
+  "dependencies": { //test
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^4.5.8",
